--- a/App.EndPoints.MvcUi/appsettings.json
+++ b/App.EndPoints.MvcUi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Bazarche;integrated security=sspi;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  }
 }
