--- a/App.EndPoints.MvcUi/appsettings.json
+++ b/App.EndPoints.MvcUi/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=Bazarche;integrated security=sspi;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
+  "FileUploadPaths": {
+    "Default": "Upload/Img/Default",
+    "Product": "Upload/Img/Product",
+    "BoothAvatar": "Upload/Img/BoothAvatar",
+    "Category": "Upload/Img/Category",
+    "Profiles": "Upload/Img/Profiles"
   }
 }
