--- a/App.EndPoints.MvcUi/App.EndPoints.MvcUi.csproj
+++ b/App.EndPoints.MvcUi/App.EndPoints.MvcUi.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\App.Infra.Data.SqlServer.Ef\App.Infra.Data.SqlServer.Ef.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Customer\" />
+  </ItemGroup>
+
 </Project>
