[develop].[Seller].[Auction]:Auctions create with auto start and auto End develped

--- a/App.EndPoints.MvcUi/App.EndPoints.MvcUi.csproj
+++ b/App.EndPoints.MvcUi/App.EndPoints.MvcUi.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\App.Infra.Configs\App.Infra.Configs.csproj" />
     <ProjectReference Include="..\App.Infra.Data.Repos.Ef\App.Infra.Data.Repos.Ef.csproj" />
     <ProjectReference Include="..\App.Infra.Data.SqlServer.Ef\App.Infra.Data.SqlServer.Ef.csproj" />
+    <ProjectReference Include="..\App.Infra.Hangfire\App.Infra.Hangfire.csproj" />
   </ItemGroup>
 
 </Project>
