--- a/RedisCache/RedisCache.csproj
+++ b/RedisCache/RedisCache.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\App.Domain.Core\App.Domain.Core.csproj" />
-    <ProjectReference Include="..\App.Infra.Configs\App.Infra.Configs.csproj" />
-    <ProjectReference Include="..\RedisCache\RedisCache.csproj" />
   </ItemGroup>
 
 </Project>
