--- a/.gitignore
+++ b/.gitignore
@@ -455,3 +455,4 @@ FodyWeavers.xsd
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638376592300190901.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638376592300625862.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638376592300647048.jpg
+/App.EndPoints.MvcUi/wwwroot/Loging/LogFile.txt
