[Develop].[Seller].[Booth]:The seller can edit his own Booth info

--- a/.gitignore
+++ b/.gitignore
@@ -456,3 +456,6 @@ FodyWeavers.xsd
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638376592300625862.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638376592300647048.jpg
 /App.EndPoints.MvcUi/wwwroot/Loging/LogFile.txt
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/BoothAvatar/638380153836780578.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638379118896026107.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638379118896469411.jpg
