[Develop].[Seller].[Product]:The seller can Edit Inserted product or delete them

--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,7 @@ FodyWeavers.xsd
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/BoothAvatar/638380153836780578.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638379118896026107.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638379118896469411.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381969116382861.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381970615131676.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381974723877431.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381974724013529.jpg
