--- a/App.Infra.Configs/App.Infra.Configs.csproj
+++ b/App.Infra.Configs/App.Infra.Configs.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="HangFireConfiguration\" />
+    <Compile Remove="HangFireConfiguration\**" />
+    <EmbeddedResource Remove="HangFireConfiguration\**" />
+    <None Remove="HangFireConfiguration\**" />
   </ItemGroup>
 
   <ItemGroup>
