[Develop].[Admin].[Customer]:Admin has full access of Customers and can perform CRUD process on theme.

--- a/.gitignore
+++ b/.gitignore
@@ -463,3 +463,5 @@ FodyWeavers.xsd
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381970615131676.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381974723877431.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381974724013529.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Profiles/638385286394132534.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Profiles/638385348023746168.jpg
