--- a/.gitignore
+++ b/.gitignore
@@ -465,3 +465,4 @@ FodyWeavers.xsd
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638381974724013529.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Profiles/638385286394132534.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Profiles/638385348023746168.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/BoothAvatar/638386246980810844.jpg
