[Debug].[seller].[Product]:CreateProductViewModel debuged

--- a/.gitignore
+++ b/.gitignore
@@ -466,3 +466,6 @@ FodyWeavers.xsd
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Profiles/638385286394132534.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/Profiles/638385348023746168.jpg
 /App.EndPoints.MvcUi/wwwroot/Upload/Img/BoothAvatar/638386246980810844.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638387118282908194.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638387118283091740.jpg
+/App.EndPoints.MvcUi/wwwroot/Upload/Img/Product/638387118283142613.jpg
