[Develop].[appsetting].[AppSetting]:A new Key defined in appsetting to set the Project base settings.

--- a/App.EndPoints.MvcUi/appsettings.json
+++ b/App.EndPoints.MvcUi/appsettings.json
@@ -15,5 +15,10 @@
     "BoothAvatar": "Upload/Img/BoothAvatar",
     "Category": "Upload/Img/Category",
     "Profiles": "Upload/Img/Profiles"
+  },
+
+  "AppSettings": {
+    "UseRedisCache": "false"
   }
+
 }
