--- a/App.Domain.AppServices/App.Domain.AppServices.csproj
+++ b/App.Domain.AppServices/App.Domain.AppServices.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\App.Domain.Core\App.Domain.Core.csproj" />
     <ProjectReference Include="..\App.Infra.Configs\App.Infra.Configs.csproj" />
-    <ProjectReference Include="..\RedisCache\RedisCache.csproj" />
+    <ProjectReference Include="..\RedisCache\App.Infra.RedisCache.csproj" />
   </ItemGroup>
 
 </Project>
